<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <ImageView
          android:id="@+id/img_university_picture"
          android:layout_width="wrap_content"
          android:layout_height="200dp"
          android:scaleType="centerCrop"
          tools:src="@drawable/img_myphoto" />

      <TextView
          android:id="@+id/tv_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/img_university_picture"
          android:layout_marginStart="5dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="5dp"
          android:textSize="25sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tv_lokasi"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_title"
          android:layout_marginStart="5dp"
          android:textSize="15sp" />
      
      <RelativeLayout
          android:id="@+id/rl_about_university"
          android:layout_marginStart="5dp"
          android:layout_marginTop="10dp"
          android:layout_below="@id/tv_lokasi"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <TextView
              android:id="@+id/tv_akreditasi"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:text="@string/akreditasi"/>

          <TextView
              android:id="@+id/tv_akreditasi_value"
              android:layout_marginStart="5sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toEndOf="@id/tv_akreditasi"
              android:textSize="15sp"
              android:text="@string/akreditasi_value"
              android:textStyle="bold"/>

          <TextView
              android:id="@+id/tv_tipe"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:layout_toEndOf="@id/tv_akreditasi_value"
              android:layout_marginStart="30dp"
              android:text="@string/tipe"/>

          <TextView
              android:id="@+id/tv_tipe_value"
              android:layout_marginStart="5sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toEndOf="@id/tv_tipe"
              android:textSize="15sp"
              android:textStyle="bold"/>

          <TextView
              android:id="@+id/tv_status"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="15sp"
              android:layout_toEndOf="@id/tv_tipe_value"
              android:layout_marginStart="30dp"
              android:text="@string/status"/>

          <TextView
              android:id="@+id/tv_status_value"
              android:layout_marginStart="5sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toEndOf="@id/tv_status"
              android:textSize="15sp"
              android:textStyle="bold"/>

      </RelativeLayout>

      <TextView
          android:id="@+id/tv_title_profile"
          android:layout_marginTop="30dp"
          android:layout_marginHorizontal="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/profil_kampus"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_below="@id/rl_about_university"/>

      <TextView

          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="5dp"
          android:id="@+id/tv_detail_profile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_title_profile"
          android:justificationMode="inter_word"/>

      <TextView
          android:id="@+id/tv_title_sejarah"
          android:layout_marginTop="30dp"
          android:layout_marginHorizontal="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sejarah_kampus"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_below="@id/tv_detail_profile"/>

      <TextView
          android:id="@+id/tv_detail_sejarah"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/tv_title_sejarah"
          android:layout_marginHorizontal="5dp"
          android:layout_marginTop="10dp"
          android:justificationMode="inter_word"/>

    <RelativeLayout
        android:layout_marginTop="30dp"
        android:layout_below="@id/tv_detail_sejarah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register_now"/>

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/btn_register"
            android:layout_marginStart="20dp"
            android:text="@string/share"
            />

    </RelativeLayout>

  </RelativeLayout>

</ScrollView>